overflow persists, possible fix. Added white space and fixed id's

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ padding-top: 5px;
 }
 .navbar-inverse .navbar-nav > li > a {
 color: #000;
+  border-radius: 3px;
 }
 .navbar-inverse {
 border-color: #D6D6D6;
@@ -163,15 +164,23 @@ height: auto;
 
 .panel-wood1{
 background-image: url(../img/wood1.jpg);
+  border-radius: 3px;
+  margin-bottom: 3px;
 }
 .panel-wood2{
 background-image: url(../img/wood2.jpg);
+  border-radius: 3px;
+  margin-bottom: 3px;
 }
 .panel-wood3{
 background-image: url(../img/wood3.jpg);
+  border-radius: 3px;
+  margin-bottom: 3px;
 }
 .panel-wood4{
 background-image: url(../img/wood4.jpg);
+  border-radius: 3px;
+  margin-bottom: 3px;
 }
 
 .panel-white{
@@ -179,7 +188,8 @@ background-image: url(../img/wood4.jpg);
   border-right: thin solid #3d3d3d;
   border-left: thin solid #3d3d3d;
   border-bottom: thin solid #3d3d3d;
-  border-radius: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .fa-cog {
